X11: Use CopyFromParent colormap when possible

This CL is a small performance optimization.  Previously,
XVisualManager always allocated a new colormap for every used visual.
However, on non-compositing WMs, on some drivers, this could result in
an expensive copy-on-present for every frame, but this should not
occur when using the root window's colormap.

BUG=661697

Review-Url: https://codereview.chromium.org/2471073002
Cr-Commit-Position: refs/heads/master@{#429371}

Former-commit-id: a03a18c3b24025623e0f2ad96ac56b8427fda7d3