ui/views/widget/desktop_aura/desktop_window_tree_host_x11.cc
@@ -1376,8 +1376,10 @@ void DesktopWindowTreeHostX11::InitX11Window(
       enable_transparent_visuals, &visual, &depth, &colormap,
       &use_argb_visual_);
 
-  attribute_mask |= CWColormap;
-  swa.colormap = colormap;
+  if (colormap != CopyFromParent) {
+    attribute_mask |= CWColormap;
+    swa.colormap = colormap;
+  }
 
   // x.org will BadMatch if we don't set a border when the depth isn't the
   // same as the parent depth.
